# vireon-contract

./: .gitignore  LICENSE  README.md  claim.json  pyproject.toml
.github/workflows/: ci.yml
docs/: VIREON_CONTRACT.md
src/vireon_contract/: capsule.py  cli.py  demo.py  hashing.py  schema.py  verify.py
tests/: test_capsule_determinism.py  test_hash_verification.py
